<resources>
    <string name="app_name">smackchat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="addChannelButton">addChannelButton</string>
    <string name="login">LOGIN</string>
    <string name="please_log_in">Please Log In</string>
    <string name="message">message</string>
    <string name="send_button">sendButton</string>
</resources>